# secrets_manager

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/secrets_manager/: __main__.py  crypto.py  keyring.py
src/secrets_manager/cli/: __init__.py  keyring.py  secrets.py
src/secrets_manager_tpm/: __main__.py  keyring.py  tpm.py
src/secrets_manager_tpm/cli/: __init__.py  keyring.py  secrets.py
